hphp/hack/test/typecheck/method_redeclaration_renamed.php.exp
File "method_redeclaration_renamed.php", line 23, characters 3-18:
  string
File "method_redeclaration_renamed.php", line 24, characters 3-18:
  int
File "method_redeclaration_renamed.php", line 15, characters 7-7:
Class C does not correctly implement all required members  (Typing[4285])
File "method_redeclaration_renamed.php", line 16, characters 7-7:
Some members are incompatible with those declared in type T
Read the following to see why:
File "method_redeclaration_renamed.php", line 10, characters 19-19:
Member f has the wrong type
File "method_redeclaration_renamed.php", line 10, characters 19-19:
T2 and T both declare ambiguous implementations of f.
File "method_redeclaration_renamed.php", line 10, characters 19-19:
T2's definition is here.
File "method_redeclaration_renamed.php", line 4, characters 19-19:
T's definition is here.
File "method_redeclaration_renamed.php", line 10, characters 19-19:
Redeclare f in C with a compatible signature.
